# CppTest

./: .gitignore  CMakeLists.txt
Content/: Sprite.frag  Sprite.vert
include/: CubicGame.h  Shader.h  SpriteRenderer.h  Texture2D.h  Time.h
src/: CubicGame.cpp  Shader.cpp  SpriteRenderer.cpp  Texture2D.cpp  Time.cpp  main.cpp
